--- a/hackthon/login/login.html
+++ b/hackthon/login/login.html
@@ -21,7 +21,9 @@
       <p>Don't have an account? <a href="signup.html">Sign up</a></p>
     </form>
   </div>
-  <script type="module" src="login.js"></script>
+  <link rel="stylesheet" href="dash.css" />
+<script type="module" src="login.js"></script>
+
 
 </body>
 </html>
