--- a/hackthon/add-p.html
+++ b/hackthon/add-p.html
@@ -4,19 +4,41 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Add Patient - Smart Care Assistant</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="add.css">
 </head>
 <body>
-  <div class="form-container">
-    <h2>Add New Patient</h2>
-    <form id="addPatientForm">
-      <input type="text" id="name" placeholder="Patient Name" required />
-      <input type="number" id="age" placeholder="Age" required />
-      <input type="text" id="condition" placeholder="Condition (e.g., Diabetes)" required />
-      <input type="text" id="contact" placeholder="Contact Info" />
-      <button type="submit">Add Patient</button>
-    </form>
-    <p id="statusMsg"></p>
+  <div class="dashboard-container">
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <h2 class="logo">SmartCare</h2>
+      <nav>
+        <ul>
+          <li><a href="dashboard.html">🏠 Dashboard</a></li>
+          <li><a href="patients.html">👥 Patients</a></li>
+          <li><a href="add-patient.html" class="active">➕ Add Patient</a></li>
+          <li><a href="rounds.html">📝 Rounds</a></li>
+          <li><a href="prescriptions.html">💊 Prescriptions</a></li>
+          <li><a href="trends.html">📈 Trends</a></li>
+          <li><a href="alerts.html">⚠️ ADR Alerts</a></li>
+          <li><a href="#" id="logoutBtn">🚪 Logout</a></li>
+        </ul>
+      </nav>
+    </aside>
+
+    <!-- Main Content -->
+    <main class="main-content">
+      <div class="form-container">
+        <h2>Add New Patient</h2>
+        <form id="addPatientForm">
+          <input type="text" id="name" placeholder="Patient Name" required />
+          <input type="number" id="age" placeholder="Age" required />
+          <input type="text" id="condition" placeholder="Condition (e.g., Diabetes)" required />
+          <input type="text" id="contact" placeholder="Contact Info" />
+          <button type="submit">Add Patient</button>
+        </form>
+        <p id="statusMsg"></p>
+      </div>
+    </main>
   </div>
 
   <script type="module" src="add-p.js"></script>
