--- a/hackthon/doctor-dashboar.html
+++ b/hackthon/doctor-dashboar.html
@@ -13,10 +13,10 @@
       <h2 class="logo">SmartCare</h2>
       <nav>
         <ul>
-          <li><a href="#">🏠 Dashboard</a></li>
+          <li><a href="doctor-dashboar.html">🏠 Dashboard</a></li>
           <li><a href="patient.html">👥 Patients</a></li>
           <li><a href="add-note.html">📝 Add Note</a></li>
-          <li><a href="#">💊 Prescriptions</a></li>
+          <li><a href="prescriptions.html">💊 Prescriptions</a></li>
           <li><a href="#">📈 Trends</a></li>
           <li><a href="add-p.html">📈 Add</a></li>
           <li><a href="#">⚠️ ADR Alerts</a></li>
