--- a/hackthon/patient.html
+++ b/hackthon/patient.html
@@ -16,7 +16,7 @@
           <li><a href="doctor-dashboard.html">🏠 Dashboard</a></li>
           <li><a href="patient.html" class="active">👥 Patients</a></li>
           <li><a href="add-note.html">📝 Add Note</a></li>
-          <li><a href="#">💊 Prescriptions</a></li>
+          <li><a href="prescriptions.html">💊 Prescriptions</a></li>
           <li><a href="#">⚠️ ADR Alerts</a></li>
           <li><a href="#">📄 Reports</a></li>
           <li><a href="#">⚙️ Settings</a></li>
