--- a/hackthon/prescriptions.html
+++ b/hackthon/prescriptions.html
@@ -13,9 +13,9 @@
       <h2 class="logo">SmartCare</h2>
       <nav>
         <ul>
-          <li><a href="dashboard.html">🏠 Dashboard</a></li>
-          <li><a href="patients.html">👥 Patients</a></li>
-          <li><a href="round-note.html">📝 Add Note</a></li>
+          <li><a href="doctor-dashboar.html">🏠 Dashboard</a></li>
+          <li><a href="patient.html">👥 Patients</a></li>
+          <li><a href="add-note.html">📝 Add Note</a></li>
           <li><a href="prescriptions.html" class="active">💊 Prescriptions</a></li>
           <li><a href="trends.html">📈 Trends</a></li>
           <li><a href="alerts.html">⚠️ ADR Alerts</a></li>
