--- a/hackthon/add-p.html
+++ b/hackthon/add-p.html
@@ -13,10 +13,10 @@
       <h2 class="logo">SmartCare</h2>
       <nav>
         <ul>
-          <li><a href="dashboard.html">🏠 Dashboard</a></li>
-          <li><a href="patients.html">👥 Patients</a></li>
-          <li><a href="add-patient.html" class="active">➕ Add Patient</a></li>
-          <li><a href="rounds.html">📝 Rounds</a></li>
+          <li><a href="doctor-dashboar.html">🏠 Dashboard</a></li>
+          <li><a href="patient.html">👥 Patients</a></li>
+          <li><a href="add-p.html" class="active">➕ Add Patient</a></li>
+          <li><a href="add-note.html">📝 Rounds</a></li>
           <li><a href="prescriptions.html">💊 Prescriptions</a></li>
           <li><a href="trends.html">📈 Trends</a></li>
           <li><a href="alerts.html">⚠️ ADR Alerts</a></li>
