--- a/hackthon/landing page.html
+++ b/hackthon/landing page.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Smart Care Assistant</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style copy.css" />
 </head>
 <body>
   <header class="header">
     <h1>Smart Care Assistant</h1>
     <nav>
-      <a href="login/login.html" class="btn">Login</a>
-      <a href="login/signup.html" class="btn outline">Sign Up</a>
+      <a href="login.html" class="btn">Login</a>
+      <a href="signup.html" class="btn outline">Sign Up</a>
     </nav>
   </header>
 
