--- a/hackthon/add-p.html
+++ b/hackthon/add-p.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Add Patient - Smart Care Assistant</title>
-  <link rel="stylesheet" href="add.css">
+  <link rel="stylesheet" href="style/add.css">
 </head>
 <body>
   <div class="dashboard-container">
@@ -15,11 +15,13 @@
         <ul>
           <li><a href="doctor-dashboar.html">🏠 Dashboard</a></li>
           <li><a href="patient.html">👥 Patients</a></li>
-          <li><a href="add-p.html" class="active">➕ Add Patient</a></li>
-          <li><a href="add-note.html">📝 Rounds</a></li>
+          <li><a href="add-note.html">📝 Add Note</a></li>
           <li><a href="prescriptions.html">💊 Prescriptions</a></li>
           <li><a href="trends.html">📈 Trends</a></li>
-          <li><a href="alerts.html">⚠️ ADR Alerts</a></li>
+          <li><a href="add-p.html" class="active">📈 Add</a></li>
+          <li><a href="adr-alerts.html">⚠️ ADR Alerts</a></li>
+          <li><a href="reports.html">📄 Reports</a></li>
+          <li><a href="settings.html">⚙️ Settings</a></li>
           <li><a href="#" id="logoutBtn">🚪 Logout</a></li>
         </ul>
       </nav>
@@ -41,6 +43,6 @@
     </main>
   </div>
 
-  <script type="module" src="add-p.js"></script>
+  <script type="module" src="scripts/add-p.js"></script>
 </body>
 </html>
