--- a/hackthon/doctor-dashboar.html
+++ b/hackthon/doctor-dashboar.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Doctor Dashboard - Smart Care Assistant</title>
-  <link rel="stylesheet" href="dash.css" />
+  <link rel="stylesheet" href="style/dash.css" />
 </head>
 <body>
   <div class="dashboard-container">
@@ -13,15 +13,15 @@
       <h2 class="logo">SmartCare</h2>
       <nav>
         <ul>
-          <li><a href="doctor-dashboar.html">🏠 Dashboard</a></li>
+          <li><a href="doctor-dashboar.html" class="active">🏠 Dashboard</a></li>
           <li><a href="patient.html">👥 Patients</a></li>
           <li><a href="add-note.html">📝 Add Note</a></li>
           <li><a href="prescriptions.html">💊 Prescriptions</a></li>
-          <li><a href="#">📈 Trends</a></li>
+          <li><a href="trends.html">📈 Trends</a></li>
           <li><a href="add-p.html">📈 Add</a></li>
-          <li><a href="#">⚠️ ADR Alerts</a></li>
-          <li><a href="#">📄 Reports</a></li>
-          <li><a href="#">⚙️ Settings</a></li>
+          <li><a href="adr-alerts.html">⚠️ ADR Alerts</a></li>
+          <li><a href="reports.html">📄 Reports</a></li>
+          <li><a href="settings.html">⚙️ Settings</a></li>
           <li><a href="#" id="logoutBtn">🚪 Logout</a></li>
         </ul>
       </nav>
@@ -61,6 +61,6 @@
       </section>
     </main>
   </div>
-  <script type="module" src="dash.js"></script>
+  <script type="module" src="scripts/dash.js"></script>
 </body>
 </html>
