--- a/hackthon/adr-alerts.html
+++ b/hackthon/adr-alerts.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Patients - Smart Care Assistant</title>
-  <link rel="stylesheet" href="style/dash.css" />
+  <title>ADR Alerts - Smart Care Assistant</title>
+  <link rel="stylesheet" href="style/adr.css" />
 </head>
 <body>
   <div class="dashboard-container">
-    <!-- Sidebar -->
+   
     <aside class="sidebar">
       <h2 class="logo">SmartCare</h2>
       <nav>
         <ul>
           <li><a href="doctor-dashboar.html">🏠 Dashboard</a></li>
-          <li><a href="patient.html" class="active">👥 Patients</a></li>
+          <li><a href="patient.html">👥 Patients</a></li>
           <li><a href="add-note.html">📝 Add Note</a></li>
           <li><a href="prescriptions.html">💊 Prescriptions</a></li>
           <li><a href="trends.html">📈 Trends</a></li>
           <li><a href="add-p.html">📈 Add</a></li>
-          <li><a href="adr-alerts.html">⚠️ ADR Alerts</a></li>
+          <li><a href="adr-alerts.html" class="active">⚠️ ADR Alerts</a></li>
           <li><a href="reports.html">📄 Reports</a></li>
           <li><a href="settings.html">⚙️ Settings</a></li>
           <li><a href="#" id="logoutBtn">🚪 Logout</a></li>
@@ -30,33 +30,31 @@
     <!-- Main Content -->
     <main class="main-content">
       <header>
-        <h1>Patients List</h1>
-        <div class="filters">
-          <input type="text" id="searchName" placeholder="Search by name..." />
-          <input type="date" id="searchDate" />
-        </div>
+        <h1>⚠️ ADR Alerts</h1>
+        <p>Review suspected Adverse Drug Reactions</p>
       </header>
 
-      <!-- Patients Table -->
       <section>
-        <table id="patientsTable">
+        <table id="adrTable">
           <thead>
             <tr>
-              <th>Name</th>
-              <th>Age</th>
-              <th>Condition</th>
-              <th>Last Seen</th>
+              <th>Patient</th>
+              <th>Drug</th>
+              <th>Symptom</th>
+              <th>Severity</th>
+              <th>Status</th>
               <th>Action</th>
             </tr>
           </thead>
           <tbody>
-            <!-- JS will populate this -->
+            <!-- Dynamic rows -->
           </tbody>
         </table>
+        <p id="statusMessage"></p>
       </section>
     </main>
   </div>
 
-  <script type="module" src="scripts/patients.js"></script>
+  <script type="module" src="scripts/adr.js"></script>
 </body>
 </html>
