--- a/hackthon/login.html
+++ b/hackthon/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - Smart Care Assistant</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
   <div class="auth-container">
@@ -22,7 +22,7 @@
     </form>
   </div>
   <link rel="stylesheet" href="dash.css" />
-<script type="module" src="login.js"></script>
+<script type="module" src="scripts/login.js"></script>
 
 
 </body>
