--- a/hackthon/prescriptions.html
+++ b/hackthon/prescriptions.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prescriptions - Smart Care Assistant</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style/style.css" />
 </head>
 <body>
   <div class="dashboard-container">
@@ -18,7 +18,8 @@
           <li><a href="add-note.html">📝 Add Note</a></li>
           <li><a href="prescriptions.html" class="active">💊 Prescriptions</a></li>
           <li><a href="trends.html">📈 Trends</a></li>
-          <li><a href="alerts.html">⚠️ ADR Alerts</a></li>
+          <li><a href="add-p.html">📈 Add</a></li>
+          <li><a href="adr-alerts.html">⚠️ ADR Alerts</a></li>
           <li><a href="reports.html">📄 Reports</a></li>
           <li><a href="settings.html">⚙️ Settings</a></li>
           <li><a href="#" id="logoutBtn">🚪 Logout</a></li>
@@ -67,6 +68,6 @@
     </main>
   </div>
 
-  <script type="module" src="prescriptions.js"></script>
+  <script type="module" src="scripts/prescriptions.js"></script>
 </body>
 </html>
