--- a/hackthon/signup.html
+++ b/hackthon/signup.html
@@ -24,6 +24,6 @@
       <p>Already have an account? <a href="login.html">Login</a></p>
     </form>
   </div>
-  <script type="module" src="signup.js"></script>
+  <script type="module" src="scripts/signup.js"></script>
 </body>
 </html>
